--- a/templates/base/html/base.html
+++ b/templates/base/html/base.html
@@ -54,7 +54,7 @@
           <h4>تاریخچه ها</h4>
           <div class="shurt-warper">
             <div class="shurt-block">
-              <button class="short">هزینه ها</button>
+              <a href="{% url 'expense_list_page' %}"><button class="short">هزینه ها</button></a>
             </div>
             <div class="shurt-block">
               <button class="short">درآمد ها</button>
