--- a/templates/base/html/main.html
+++ b/templates/base/html/main.html
@@ -56,6 +56,8 @@
       {% block "expense" %}{% endblock "expense" %}
       {% block "income" %}{% endblock "income" %}
       {% block "note" %}{% endblock "note" %}
+      {% block "expense_list" %}{% endblock "expense_list" %}
+      {% block "expense_item" %}{% endblock "expense_item" %}
 
 
 
